--- a/09-v-model使用/06-v-model修饰符的使用.html
+++ b/09-v-model使用/06-v-model修饰符的使用.html
@@ -6,7 +6,17 @@
 </head>
 <body>
 <div id="app">
-  {{message}}
+<!--  1.修饰符lazy-->
+  <input type="text" v-model.lazy="message">
+  <h2>{{message}}</h2>
+  
+<!--  2.修饰符number-->
+  <input type="number" v-model.number="age">
+  <h2>{{age}}--{{typeof age}}</h2>
+
+<!--  3.修饰符: trim-->
+  <input type="text" v-model.trim="name">
+  <h2>您输入的名字: {{name}}</h2>
 </div>
 <script src="../js/vue.js"></script>
 <script>
@@ -14,6 +24,8 @@
     el: '#app',
     data: {
       message:'你好啊',
+      age: 0,
+      name: ''
     }
   })
 </script>
